--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
     </head>
 
     <body>
+        <table id="schedule-table">
+            <thead>
+                <tr>
+                    <th>Period</th>
+                    <th>Name</th>
+                    <th>Teacher</th>
+                    <th>Room</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Table rows will be inserted here dynamically -->
+            </tbody>
+        </table>
             <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
