--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Placeholder</title>
+        <title>School Schedule</title>
         <!--FAVICON-->
         <link 
             rel="icon" 
@@ -51,6 +51,7 @@
                     <th>Name</th>
                     <th>Teacher</th>
                     <th>Room</th>
+                    <th>Time</th>
                 </tr>
             </thead>
             <tbody>
