time works, should be all done

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <!-- Table rows will be inserted here dynamically -->
             </tbody>
         </table>
+        <button onclick="localStorage.clear()">Clear memory in case of incorrect info</button>
             <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
