added delayed openings and early dismissals

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                 <!-- Table rows will be inserted here dynamically -->
             </tbody>
         </table>
-        <button onclick="localStorage.clear()">Clear memory in case of incorrect info</button>
+        <button onclick="localStorage.clear(); location.reload()">Clear memory in case of incorrect info</button>
+        <button onclick="earlyDismissal = true; delayedOpening = false; buildSchedule('G')">Click for early dismissal schedule</button>
+        <button onclick="delayedOpening = true; earlyDismissal = false; buildSchedule('G')">Click for delayed opening shcedule</button>
+        <button onclick="delayedOpening = false; earlyDismissal = false; buildSchedule('G')">Click for full day schedule</button>
             <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
